Fix: color contrast, text headings, image alt text

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h3 {
 }
 
 .green {
-  color: #36b37e;
+  color: #227E57;
 }
 
 .neutal-blue {
